[tool.poetry]
name = "zgc"
version = "0.1.0"
description = "A tool for programming Telink chips over a serial port."
authors = ["Telink semiconductors <help@telink-semi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.7"
pyserial = "^3.5"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
